re-enable R check command

--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           extra-repositories: "https://p3m.dev/cran/__linux__/noble/latest"
       - uses: r-lib/actions/setup-r-dependencies@v2
-      #   with:
-      #     extra-packages: any::rcmdcheck
-      #     needs: check
-      # - uses: r-lib/actions/check-r-package@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
+      - uses: r-lib/actions/check-r-package@v2
