remove progress box (replaced by loading spinners)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
         - lubridate
         - plotly
         - shiny
+        - shinycssloaders
         - tidyr
     # codemeta must be above use-tidy-description when both are used
     # -   id: codemeta-description-updated
