tweak data collection

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
         - arrow
         - bslib
         - dplyr
+        - duckdb
         - ggplot2
         - lubridate
         - plotly
