add unit tests for connect_users_totals_app

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,9 +30,16 @@ Imports:
     shinycssloaders,
     tidyr
 Suggests:
+    devtools (>= 2.4.6),
     shinytest2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble (>= 3.3.0),
+    withr (>= 3.0.2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Config/testthat/edition: 3
+Remotes:
+    r-lib/devtools,
+    tidyverse/tibble,
+    r-lib/withr
