rename functions to chronicle_ instead of chr_

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,4 @@ export(chr_get_metric_data)
 export(chronicle_data)
 export(chronicle_list_apps)
 export(chronicle_raw_data)
-export(list_apps)
-export(run_app)
+export(chronicle_run_app)
