--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ export(chronicle_list_data)
 export(chronicle_list_raw_data)
 export(chronicle_raw_data)
 export(chronicle_run_app)
-export(chronicle_sample_path)
+export(chronicle_sample_data)
