--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,5 @@ export(chronicle_list_raw_data)
 export(chronicle_raw_data)
 export(chronicle_run_app)
 export(chronicle_sample_data)
+importFrom(stats,aggregate)
+importFrom(stats,runif)
