--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,12 @@ License: MIT + file LICENSE
 URL: https://github.com/posit-dev/chronicle-reports
 BugReports: https://github.com/posit-dev/chronicle-reports/issues
 Depends:
-    R (>= 4.1.0),
-    dplyr
+    R (>= 4.1.0)
 Imports:
     arrow,
     bslib,
     charlatan,
+    dplyr,
     DT,
     ggplot2,
     glue,
