--- a/.github/workflows/update-manifests.yml
+++ b/.github/workflows/update-manifests.yml
@@ -18,36 +18,67 @@ jobs:
     # Skip commits made by this workflow to prevent infinite loops
     if: github.event.head_commit.author.username != 'github-actions[bot]'
     runs-on: ubuntu-24.04
+    container: r-base:latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: "4.5.2"
-          extra-repositories: "https://p3m.dev/cran/__linux__/noble/latest"
+      - name: Install system dependencies
+        run: |
+          apt-get update
+          apt-get install -y \
+            git \
+            libssl-dev \
+            libcurl4-gnutls-dev \
+            libxml2-dev \
+            libfontconfig1-dev \
+            libfreetype6-dev \
+            libpng-dev \
+            libtiff5-dev \
+            libjpeg-dev
+          rm -rf /var/lib/apt/lists/*
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::rsconnect, any::renv, any::devtools
+      - name: Install GitHub CLI
+        run: |
+          apt-get update
+          apt-get install -y curl
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+          chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          apt-get update
+          apt-get install -y gh
+          rm -rf /var/lib/apt/lists/*
+
+      - name: Install R packages
+        run: |
+          Rscript -e '
+          options(HTTPUserAgent = sprintf("R/%s R (%s)", getRversion(), paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"])))
+          install.packages(c("rsconnect", "renv", "devtools"), repos = c(CRAN = "https://p3m.dev/cran/__linux__/bookworm/latest"))
+          '
 
       - name: Install chronicle.reports with dependencies
         run: |
-          Rscript -e 'devtools::install(dependencies = TRUE, upgrade = FALSE)'
+          Rscript -e '
+          options(HTTPUserAgent = sprintf("R/%s R (%s)", getRversion(), paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"])))
+          devtools::install(dependencies = TRUE, upgrade = FALSE)
+          '
 
       - name: Regenerate manifests
         run: |
           Rscript -e '
+          # Set HTTPUserAgent for P3M binary packages
+          options(HTTPUserAgent = sprintf("R/%s R (%s)", getRversion(), paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"])))
+
           # Set up named repositories for renv
           options(repos = c(
-            CRAN = "https://p3m.dev/cran/__linux__/noble/latest"
+            CRAN = "https://p3m.dev/cran/__linux__/bookworm/latest"
           ))
 
           app_dirs <- c("inst/apps/connect", "inst/apps/workbench")
           for (app_dir in app_dirs) {
             message("Generating manifest for: ", app_dir)
 
-            # Snapshot current dependencies to renv.lock
-            renv::snapshot(project = app_dir, prompt = FALSE)
+            # Snapshot current dependencies to renv.lock, skip validation
+            renv::snapshot(project = app_dir, prompt = FALSE, force = TRUE)
 
             # Generate manifest.json
             rsconnect::writeManifest(appDir = app_dir)
