--- a/.github/workflows/update-manifests.yml
+++ b/.github/workflows/update-manifests.yml
@@ -37,17 +37,6 @@ jobs:
             libjpeg-dev
           rm -rf /var/lib/apt/lists/*
 
-      - name: Install GitHub CLI
-        run: |
-          apt-get update
-          apt-get install -y curl
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          apt-get update
-          apt-get install -y gh
-          rm -rf /var/lib/apt/lists/*
-
       - name: Install R packages
         run: |
           Rscript -e '
@@ -78,37 +67,14 @@ jobs:
           }
           '
 
-      - name: Check for changes
-        id: changes
-        run: |
-          MANIFEST_FILES="inst/apps/connect/manifest.json inst/apps/connect/renv.lock inst/apps/workbench/manifest.json inst/apps/workbench/renv.lock"
-          if git diff --quiet -- $MANIFEST_FILES; then
-            echo "changed=false" >> "$GITHUB_OUTPUT"
-          else
-            echo "changed=true" >> "$GITHUB_OUTPUT"
-          fi
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v8
+        with:
+          title: "Update Shiny app manifests"
+          body: |
+            Automated update of `manifest.json` and `renv.lock` for Shiny apps in `inst/apps/`.
 
-      - name: Create PR with updated manifests
-        if: steps.changes.outputs.changed == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          BRANCH="auto/update-manifests-$(date +%Y%m%d-%H%M%S)"
-          TARGET="${{ github.ref_name }}"
-
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git checkout -b "$BRANCH"
-          git add inst/apps/connect/manifest.json inst/apps/connect/renv.lock \
-                  inst/apps/workbench/manifest.json inst/apps/workbench/renv.lock
-          git commit -m "Update Shiny app manifests and renv.lock files"
-          git push origin "$BRANCH"
-
-          gh pr create \
-            --base "$TARGET" \
-            --head "$BRANCH" \
-            --title "Update Shiny app manifests" \
-            --body "Automated update of \`manifest.json\` and \`renv.lock\` for Shiny apps in \`inst/apps/\`.
-
-          Triggered by push to \`$TARGET\`."
+            Triggered by push to `${{ github.ref_name }}`.
+          branch: auto/update-manifests
+          commit-message: "Update Shiny app manifests and renv.lock files"
+          delete-branch: true
